2012-09-26  Julien Bect  <julien.bect@supelec.fr>

	Better initial guess for the log of the noise variance
	in example08.m (log(eps) wasn't working well with sqp())

	* examples/example08.m: modified

2012-09-16  Julien Bect  <julien.bect@supelec.fr>

	Fixing docs and copyright notices.

	* misc/dist/stk_mindist.m: doc modified
	* misc/dist/stk_distance_matrix.m: doc modified

	Fixing bugs in stk_runscript.m and run_all_examples.m

	* examples/run_all_examples.m: bugfix
	* misc/test/stk_runscript.m: bugfix

2012-09-08  Julien Bect  <julien.bect@supelec.fr>

	Adding default bounds for Matern 3/2 covariances.

	* paramestim/stk_param_estim.m: modified


=====================
===  Release 1.1  ===
=====================

2012-08-28  Emmanuel Vazquez <emmanuel.vazquez@supelec.fr>

	Fixing comments (5/2 -> 3/2).

	* covfcs/stk_materncov32_aniso.m: doc modified
	* covfcs/stk_materncov32_iso.m: idem

	Updating HTML doc.

	* htmldoc/*: modified

2012-08-17  Julien Bect  <julien.bect@supelec.fr>

	Preparing for release 1.1: updating copyright notices and copying
	permission statements, removing trailing white spaces, added a
	user-level log of changes.

	* almost-all-files: doc & code formatting modified
	* NEWS: new file

	Added a new function (stk_runscript) to solve a problem of 
	inconsistent behaviour of the run function between Matlab and the
	latest version of Octave (one wants a '.m', the other doesn't).

	* misc/test/stk_runscript.m: new function
	* examples/run_all_examples.m: modified

	Renamed README.txt to README. Added explicit version requirements 
	for GNU Octave (3.2.0) and Matlab (R2007a).

	* README.txt: renamed and renamed

	Added tests and a little bit of arg checking.

	* covfcs/stk_materncov32_aniso.m: tests + arg checking
	* covfcs/stk_materncov32_iso.m: idem
	* covfcs/stk_materncov52_aniso.m: idem
	* covfcs/stk_materncov52_iso.m: idem
	* covfcs/stk_noisecov.m: idem
	* covfcs/stk_materncov_aniso.m: idem
	* covfcs/stk_materncov_iso.m: idem
