@@ -237,6 +237,6 @@ This function is called by:
 0169 <span class="comment">%!% The second output depends on x0 only =&gt; should be the same for (1)--(3)</span>
 0170 <span class="comment">%!test  assert(isequal(Pa, Pb));</span>
 0171 <span class="comment">%!test  assert(isequal(Pa, Pc));</span></pre></div>
-<hr><address>Generated on Tue 28-Aug-2012 13:49:02 by <strong><a href="http://www.artefact.tk/software/matlab/m2html/" title="Matlab Documentation in HTML">m2html</a></strong> &copy; 2005</address>
+<hr><address>Generated on Mon 01-Oct-2012 15:03:37 by <strong><a href="http://www.artefact.tk/software/matlab/m2html/" title="Matlab Documentation in HTML">m2html</a></strong> &copy; 2005</address>
 </body>
 </html>
