@@ -208,6 +208,6 @@ This function is called by:
 0139 <span class="comment">%!error</span>
 0140 <span class="comment">%! model.order =  3; P = stk_ortho_func(model, x);</span>
 0141 <span class="comment">%! % model.order &gt; 2 is not allowed</span></pre></div>
-<hr><address>Generated on Tue 28-Aug-2012 13:49:02 by <strong><a href="http://www.artefact.tk/software/matlab/m2html/" title="Matlab Documentation in HTML">m2html</a></strong> &copy; 2005</address>
+<hr><address>Generated on Mon 01-Oct-2012 15:03:37 by <strong><a href="http://www.artefact.tk/software/matlab/m2html/" title="Matlab Documentation in HTML">m2html</a></strong> &copy; 2005</address>
 </body>
 </html>
