@@ -313,6 +313,6 @@ This function is called by:
 0231 <span class="comment">%!</span>
 0232 <span class="comment">%! %% check that both methods give the same result</span>
 0233 <span class="comment">%! assert(stk_isequal_tolrel(y_prd1, y_prd2));</span></pre></div>
-<hr><address>Generated on Tue 28-Aug-2012 13:49:02 by <strong><a href="http://www.artefact.tk/software/matlab/m2html/" title="Matlab Documentation in HTML">m2html</a></strong> &copy; 2005</address>
+<hr><address>Generated on Mon 01-Oct-2012 15:03:37 by <strong><a href="http://www.artefact.tk/software/matlab/m2html/" title="Matlab Documentation in HTML">m2html</a></strong> &copy; 2005</address>
 </body>
 </html>
