@@ -54,7 +54,7 @@
 <h2><a name="_cross"></a>CROSS-REFERENCE INFORMATION <a href="#_top"><img alt="^" border="0" src="../up.png"></a></h2>
 This function calls:
 <ul style="list-style-image:url(../matlabicon.gif)">
-<li><a href="../misc/dist/stk_distance_matrix.html" class="code" title="">stk_distance_matrix</a>	STK_DISTANCE_MATRIX...</li><li><a href="../misc/error/stk_narginchk.html" class="code" title="function [err_msg, err_mnemonic] = stk_narginchk(n_low, n_high)">stk_narginchk</a>	STK_NARGINCHK checks whether the number of input arguments is acceptable.</li><li><a href="../misc/specfun/stk_sf_matern.html" class="code" title="function k = stk_sf_matern(Nu, h, diff)">stk_sf_matern</a>	STK_SF_MATERN computes the Matern correlation function.</li></ul>
+<li><a href="../misc/dist/stk_distance_matrix.html" class="code" title="">stk_distance_matrix</a>	STK_DISTANCE_MATRIX computes a matrix of (Euclidean) distances</li><li><a href="../misc/error/stk_narginchk.html" class="code" title="function [err_msg, err_mnemonic] = stk_narginchk(n_low, n_high)">stk_narginchk</a>	STK_NARGINCHK checks whether the number of input arguments is acceptable.</li><li><a href="../misc/specfun/stk_sf_matern.html" class="code" title="function k = stk_sf_matern(Nu, h, diff)">stk_sf_matern</a>	STK_SF_MATERN computes the Matern correlation function.</li></ul>
 This function is called by:
 <ul style="list-style-image:url(../matlabicon.gif)">
 </ul>
@@ -215,6 +215,6 @@ This function is called by:
 0150 <span class="comment">%!    dK = stk_materncov_iso(param, x, y,  i);</span>
 0151 <span class="comment">%!    assert(isequal(size(dK), [nx ny]));</span>
 0152 <span class="comment">%!  end</span></pre></div>
-<hr><address>Generated on Tue 28-Aug-2012 13:49:02 by <strong><a href="http://www.artefact.tk/software/matlab/m2html/" title="Matlab Documentation in HTML">m2html</a></strong> &copy; 2005</address>
+<hr><address>Generated on Mon 01-Oct-2012 15:03:37 by <strong><a href="http://www.artefact.tk/software/matlab/m2html/" title="Matlab Documentation in HTML">m2html</a></strong> &copy; 2005</address>
 </body>
 </html>
