@@ -112,6 +112,6 @@ This function is called by:
 0068 <span class="comment">%!test  K = stk_noisecov(ni, lognoisevariance);</span>
 0069 <span class="comment">%!test  K = stk_noisecov(ni, lognoisevariance, diff);</span>
 0070 <span class="comment">%!error K = stk_noisecov(ni, lognoisevariance, diff, pi^2);</span></pre></div>
-<hr><address>Generated on Tue 28-Aug-2012 13:49:02 by <strong><a href="http://www.artefact.tk/software/matlab/m2html/" title="Matlab Documentation in HTML">m2html</a></strong> &copy; 2005</address>
+<hr><address>Generated on Mon 01-Oct-2012 15:03:37 by <strong><a href="http://www.artefact.tk/software/matlab/m2html/" title="Matlab Documentation in HTML">m2html</a></strong> &copy; 2005</address>
 </body>
 </html>
