@@ -178,6 +178,6 @@ This function is called by:
 0131 t = <span class="string">'Kriging prediction based on noisy observations'</span>;
 0132 set( gcf, <span class="string">'Name'</span>, t ); title(t);
 0133 xlabel(<span class="string">'x'</span>); ylabel(<span class="string">'z'</span>);</pre></div>
-<hr><address>Generated on Tue 28-Aug-2012 13:49:02 by <strong><a href="http://www.artefact.tk/software/matlab/m2html/" title="Matlab Documentation in HTML">m2html</a></strong> &copy; 2005</address>
+<hr><address>Generated on Mon 01-Oct-2012 15:03:37 by <strong><a href="http://www.artefact.tk/software/matlab/m2html/" title="Matlab Documentation in HTML">m2html</a></strong> &copy; 2005</address>
 </body>
 </html>
