@@ -166,6 +166,6 @@ This function is called by:
 0119 
 0120 <a href="../misc/plot/stk_plot1d.html" class="code" title="function stk_plot1d(xi, zi, xt, zt, zp, h_axis)">stk_plot1d</a>(xi,zi,xt,zt,zp)
 0121 model <span class="comment">%#ok&lt;NOPTS&gt;</span></pre></div>
-<hr><address>Generated on Tue 28-Aug-2012 13:49:02 by <strong><a href="http://www.artefact.tk/software/matlab/m2html/" title="Matlab Documentation in HTML">m2html</a></strong> &copy; 2005</address>
+<hr><address>Generated on Mon 01-Oct-2012 15:03:37 by <strong><a href="http://www.artefact.tk/software/matlab/m2html/" title="Matlab Documentation in HTML">m2html</a></strong> &copy; 2005</address>
 </body>
 </html>
