@@ -124,6 +124,6 @@ This function is called by:
 0078 x = <a href="../sampling/stk_sampling_randunif.html" class="code" title="function x = stk_sampling_randunif(n, dim, box)">stk_sampling_randunif</a>(N2, DIM, BOX);
 0079 subplot(nr, nc, 6); plot(x.a(:,1), x.a(:,2), <span class="string">'*'</span>);
 0080 title(sprintf(<span class="string">'%d-points randunif MCS'</span>, N2));</pre></div>
-<hr><address>Generated on Tue 28-Aug-2012 13:49:02 by <strong><a href="http://www.artefact.tk/software/matlab/m2html/" title="Matlab Documentation in HTML">m2html</a></strong> &copy; 2005</address>
+<hr><address>Generated on Mon 01-Oct-2012 15:03:37 by <strong><a href="http://www.artefact.tk/software/matlab/m2html/" title="Matlab Documentation in HTML">m2html</a></strong> &copy; 2005</address>
 </body>
 </html>
