@@ -29,6 +29,6 @@
 <ul style="list-style-image:url(../simulinkicon.gif)">
 <li>View the <a href="graph.html">Graph</a>.</li>
 </ul>
-<hr><address>Generated on Tue 28-Aug-2012 13:49:00 by <strong><a href="http://www.artefact.tk/software/matlab/m2html/" title="Matlab Documentation in HTML">m2html</a></strong> &copy; 2005</address>
+<hr><address>Generated on Mon 01-Oct-2012 15:03:34 by <strong><a href="http://www.artefact.tk/software/matlab/m2html/" title="Matlab Documentation in HTML">m2html</a></strong> &copy; 2005</address>
 </body>
 </html>
