@@ -52,7 +52,7 @@
 <h2><a name="_cross"></a>CROSS-REFERENCE INFORMATION <a href="#_top"><img alt="^" border="0" src="../up.png"></a></h2>
 This function calls:
 <ul style="list-style-image:url(../matlabicon.gif)">
-<li><a href="../misc/dist/stk_mindist.html" class="code" title="">stk_mindist</a>	STK_MINDIST ...</li><li><a href="../misc/error/stk_narginchk.html" class="code" title="function [err_msg, err_mnemonic] = stk_narginchk(n_low, n_high)">stk_narginchk</a>	STK_NARGINCHK checks whether the number of input arguments is acceptable.</li></ul>
+<li><a href="../misc/dist/stk_mindist.html" class="code" title="">stk_mindist</a>	STK_MINDIST computes the separation distance of a set of points</li><li><a href="../misc/error/stk_narginchk.html" class="code" title="function [err_msg, err_mnemonic] = stk_narginchk(n_low, n_high)">stk_narginchk</a>	STK_NARGINCHK checks whether the number of input arguments is acceptable.</li></ul>
 This function is called by:
 <ul style="list-style-image:url(../matlabicon.gif)">
 <li><a href="../examples/example03.html" class="code" title="">example03</a>	Example 03 constructs a kriging approximation in 2D</li><li><a href="../examples/example04.html" class="code" title="">example04</a>	Example 04 shows two-dimensional designs</li><li><a href="stk_sampling_randomlhs.html" class="code" title="function x = stk_sampling_randomlhs(n, dim, box)">stk_sampling_randomlhs</a>	STK_SAMPLING_RANDOMLHS generates a random LHS design.</li></ul>
@@ -218,6 +218,6 @@ This function is called by:
 0153 <span class="comment">%!   assert((min(u) &gt;= 0) &amp;&amp; (max(u) &lt;= 1));</span>
 0154 <span class="comment">%!   assert(stk_is_lhs(x, n, dim));</span>
 0155 <span class="comment">%! end</span></pre></div>
-<hr><address>Generated on Tue 28-Aug-2012 13:49:02 by <strong><a href="http://www.artefact.tk/software/matlab/m2html/" title="Matlab Documentation in HTML">m2html</a></strong> &copy; 2005</address>
+<hr><address>Generated on Mon 01-Oct-2012 15:03:37 by <strong><a href="http://www.artefact.tk/software/matlab/m2html/" title="Matlab Documentation in HTML">m2html</a></strong> &copy; 2005</address>
 </body>
 </html>
