@@ -168,6 +168,6 @@ This function is called by:
 0113 <span class="comment">%!   assert(~any(isnan(u) | isinf(u)));</span>
 0114 <span class="comment">%!   assert((min(u) &gt;= 0) &amp;&amp; (max(u) &lt;= 1));</span>
 0115 <span class="comment">%! end</span></pre></div>
-<hr><address>Generated on Tue 28-Aug-2012 13:49:02 by <strong><a href="http://www.artefact.tk/software/matlab/m2html/" title="Matlab Documentation in HTML">m2html</a></strong> &copy; 2005</address>
+<hr><address>Generated on Mon 01-Oct-2012 15:03:37 by <strong><a href="http://www.artefact.tk/software/matlab/m2html/" title="Matlab Documentation in HTML">m2html</a></strong> &copy; 2005</address>
 </body>
 </html>
