@@ -162,6 +162,6 @@ This function is called by:
 0098 <span class="comment">%!  xt = stk_sampling_regulargrid(N, 1, [0; 1]);</span>
 0099 <span class="comment">%!  yt = stk_feval(f, xt);</span>
 0100 <span class="comment">%!  assert(isstruct(yt) &amp;&amp; isfield(yt, 'a') &amp;&amp; isequal(size(yt.a), [N 1]));</span></pre></div>
-<hr><address>Generated on Tue 28-Aug-2012 13:49:02 by <strong><a href="http://www.artefact.tk/software/matlab/m2html/" title="Matlab Documentation in HTML">m2html</a></strong> &copy; 2005</address>
+<hr><address>Generated on Mon 01-Oct-2012 15:03:37 by <strong><a href="http://www.artefact.tk/software/matlab/m2html/" title="Matlab Documentation in HTML">m2html</a></strong> &copy; 2005</address>
 </body>
 </html>
