@@ -1,3 +1,9 @@
+2012-10-01  Emmanuel Vazquez <emmanuel.vazquez@supelec.fr>
+    
+	Preparing fore release 1.1.1: updating HTML doc.
+
+	* htmldoc/*: modified
+
 2012-09-26  Julien Bect  <julien.bect@supelec.fr>
 
 	Better initial guess for the log of the noise variance
